--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^0.1.7",
+    "cookies-next": "^6.0.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
